<?xml version="1.0"?>
<package>
  <name>img_roi</name>
  <version>0.0.0</version>
  <description>img roi</description>

  <maintainer email="jinyao383@hotmail.com">jinyao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>


  <run_depend>roscpp</run_depend>

</package>
